--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- === CSS === -->
     <link rel="stylesheet" href="assests/css/style.css">
-    <title>Document</title>
+    <title>Tasty Food</title>
 </head>
 <body>
 
