--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
         <!-- === SERVICES === -->
-        <section class="services section contaner" id="services">
+        <section class="services section container" id="services">
             <span class="section_subtitle">Offering</span>
             <h2 class="section_title">Our amazing services</h2>
 
